--- a/Untitled3.ipynb
+++ b/Untitled3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyPjoWlVHGuVlOgbH2yqD2uJ",
+      "authorship_tag": "ABX9TyP6epBUmQT+s6/ofF3/gUPS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -321,8 +321,8 @@
         "\n",
         "fig, axs = plt.subplots(2, 2, figsize=(10, 8))\n",
         "\n",
-        "axs[0, 0].plot(x, y1, marker='o', color='b', label='Line 1')  # প্রথম লাইন\n",
-        "axs[0, 0].plot(x, y2, marker='s', linestyle='--', color='r', label='Line 2')  # দ্বিতীয় লাইন\n",
+        "axs[0, 0].plot(x, y1, marker='o', color='b', label='Line 1')\n",
+        "axs[0, 0].plot(x, y2, marker='s', linestyle='--', color='r', label='Line 2')\n",
         "axs[0, 0].set_title('Line Plot')\n",
         "axs[0, 0].set_xlabel('X-axis')\n",
         "axs[0, 0].set_ylabel('Y-axis')\n",
