--- a/Untitled3.ipynb
+++ b/Untitled3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyP6epBUmQT+s6/ofF3/gUPS",
+      "authorship_tag": "ABX9TyNyXo0cpjL5Yye1BEBOyfh+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -411,6 +411,115 @@
       ],
       "metadata": {
         "id": "V9ABsE5mIw42"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "x = [1, 2, 3, 4, 5]\n",
+        "y = [10, 20, 15, 25, 30]\n",
+        "\n",
+        "plt.plot(x, y, marker='o', linestyle='-', color='r', label=\"Line Plot\")\n",
+        "\n",
+        "plt.title(\"Simple Line Plot\")\n",
+        "plt.xlabel(\"X-axis\")\n",
+        "plt.ylabel(\"Y-axis\")\n",
+        "plt.legend()\n",
+        "plt.grid(True, linestyle='--', alpha=0.5)\n",
+        "\n",
+        "plt.savefig(\"my_plot.png\", dpi=1000, bbox_inches='tight')\n",
+        "\n",
+        "plt.show()\n"
+      ],
+      "metadata": {
+        "id": "jXBTbYGQIb-j"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "import numpy as np\n",
+        "\n",
+        "x = np.arange(1, 11)\n",
+        "y1 = x ** 2\n",
+        "y2 = np.log(x)\n",
+        "\n",
+        "fig, ax1 = plt.subplots(figsize=(8, 5))\n",
+        "\n",
+        "ax1.plot(x, y1, 'b-o', label=\"y = x²\")\n",
+        "ax1.set_xlabel(\"X-axis\")\n",
+        "ax1.set_ylabel(\"Y1: Square\", color='b')\n",
+        "ax1.tick_params(axis='y', labelcolor='b')\n",
+        "\n",
+        "ax2 = ax1.twinx()\n",
+        "ax2.plot(x, y2, 'r-s', label=\"y = log(x)\")\n",
+        "ax2.set_ylabel(\"Y2: Logarithm\", color='r')\n",
+        "ax2.tick_params(axis='y', labelcolor='r')\n",
+        "\n",
+        "plt.title(\"Dual Y-Axis Plot (Square & Logarithm)\")\n",
+        "ax1.grid(True, linestyle='--', alpha=0.6)\n",
+        "\n",
+        "plt.savefig(\"dual_y_axis_plot.png\", dpi=150, bbox_inches='tight')\n",
+        "\n",
+        "plt.show()\n"
+      ],
+      "metadata": {
+        "id": "5RO_NYOwLL4Y"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "import numpy as np\n",
+        "\n",
+        "x = np.linspace(0, 10, 100)\n",
+        "y = np.sin(x)\n",
+        "\n",
+        "plt.fill_between(x, y, color='skyblue', alpha=0.5)\n",
+        "\n",
+        "plt.plot(x, y, color='blue')\n",
+        "\n",
+        "plt.show()\n"
+      ],
+      "metadata": {
+        "id": "-UOQeP-4YM0X"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "from mpl_toolkits.mplot3d import Axes3D\n",
+        "import numpy as np\n",
+        "\n",
+        "x = np.linspace(-5, 5, 100)\n",
+        "y = np.linspace(-5, 5, 100)\n",
+        "\n",
+        "x, y = np.meshgrid(x, y)\n",
+        "\n",
+        "z = np.sin(x) * np.cos(y)\n",
+        "\n",
+        "fig = plt.figure()\n",
+        "ax = fig.add_subplot(111, projection='3d')\n",
+        "\n",
+        "ax.plot_surface(x, y, z, cmap='viridis')\n",
+        "\n",
+        "plt.show()\n"
+      ],
+      "metadata": {
+        "id": "ytutGd61Ynfn"
       },
       "execution_count": null,
       "outputs": []
